Shang New Live/src/objects/Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Foreign__c</fullName>
        <label>Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Managed by Invoice Trigger (works on Invoice creation only):
This Amount shows summarized Amount from related RRDs</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Formula__c</fullName>
        <formula>Lease_Charge__r.Formula_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Lease Charge</inlineHelpText>
        <label>Charge Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <formula>TEXT(Invoice__r.Charge_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <formula>Lease_Charge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Lease Charge</inlineHelpText>
        <label>Charge Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <formula>Lease_Charge__r.Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <formula>TEXT(Lease_Charge__r.Charge_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Foreign__c</fullName>
        <label>Comm Tax Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Local__c</fullName>
        <label>Comm Tax Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount__c</fullName>
        <label>Comm Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Populated from Invoice trigger
Lease Charge &gt; Charge Description
if created via Late Charge process then get the value from RRD - Remarks</description>
        <inlineHelpText>Populated from Invoice trigger
Lease Charge &gt; Charge Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <description># of Defaulted days for which the Tenant did not pay the Invoice</description>
        <inlineHelpText># of Defaulted days for which the Tenant did not pay the Invoice</inlineHelpText>
        <label>Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Managed by Invoice Trigger to get value from related RRD on Invoice creation</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTO_Amount__c</fullName>
        <inlineHelpText>GTO Amount from RS</inlineHelpText>
        <label>GTO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Invoice__r.Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This shows Previous Invoice # and is applicable for Late Charge Invoice creation process.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items (From Previous Invoice)</relationshipLabel>
        <relationshipName>Invoice_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Rate__c</fullName>
        <inlineHelpText>Late Payment Interest (%) as defined in Previous Invoice&apos;s related Lease</inlineHelpText>
        <label>Late % Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated from Invoice trigger on creation</inlineHelpText>
        <label>Lease Charge</label>
        <referenceTo>Lease_Charges__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Inovoice_Name__c</fullName>
        <description>This field refers to Old Invoice Name for DN/CN. 
Handled through backend code</description>
        <inlineHelpText>This field refers to Old Invoice Name for DN/CN. 
Handled through backend code</inlineHelpText>
        <label>Old Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Inv_Billing_Type__c</fullName>
        <formula>Invoice_old__r.Billing_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Inv Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Inv_Last_Payment_Date__c</fullName>
        <formula>Invoice_old__r.Last_Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Inv Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Inv_Payment_Due_Date__c</fullName>
        <formula>Invoice_old__r.Payment_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Inv Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Invoice_Name__c</fullName>
        <description>This field refers to Old Invoice Name for DN/CN. 
Handled through backend code</description>
        <inlineHelpText>This field refers to Old Invoice Name DN/CN. 
Handled through backend code</inlineHelpText>
        <label>Old Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <inlineHelpText>This field is populated from Late Charge Invoice creation process (CR Interface and monthly batch) and is used to populate &apos;Outstanding Amount&apos; from Previous Invoice.</inlineHelpText>
        <label>Outstanding Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <description>If &quot;Transaction Start Date&quot; have value then we show &quot;Transaction Start Date&quot; otherwise 
&quot;Start Date&quot;</description>
        <formula>IF(NOT(ISBLANK(Transaction_Start_Date__c)), Transaction_Start_Date__c, Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent Schedule</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Amount__c</fullName>
        <inlineHelpText>sum of POS Transaction amount from RS</inlineHelpText>
        <label>Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <formula>TEXT(Lease_Charge__r.Lease_Unit__r.Unit__r.Space_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Space Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Managed by Invoice Trigger to get value from related RRD on Invoice creation</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Foreign__c</fullName>
        <formula>Amount_Foreign__c + Comm_Tax_Amount_Foreign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Local__c</fullName>
        <formula>Amount_Local__c + Comm_Tax_Amount_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c +  Comm_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_End_Date__c</fullName>
        <label>Transaction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Start_Date__c</fullName>
        <label>Transaction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Lease_Charge__r.Lease_Unit__r.Unit__r.Unit_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Created to manage Withholding Amount Roll-up on Invoice</inlineHelpText>
        <label>Withholding Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>on_Invoice__c</fullName>
        <formula>If(Sales_Amount__c &gt; 0 , ( Amount_Local__c  / Sales_Amount__c)*100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Amount (Local) / Sales Amount
This field is referred in GTO Invoice PDF % column</inlineHelpText>
        <label>% on Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{yyyy}-{mm}-RI-{00000000}</displayFormat>
        <label>Invoice Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>